src/styles/_Task.scss
.Task {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    justify-content: center;
    align-items: center;
    background-color: var(--secondary-color);
    width: 18rem;
    min-height: 3rem;
    border-radius: .3rem;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    z-index: 999;
    overflow-wrap: break-word;
    z-index: 100;
    

    &__checkbox {
        -webkit-appearance: none;
        appearance: none;
        border: .1rem solid var(--lt-dark-grayish-blue);
        width: 1.2rem;
        height: 1.2rem;
        z-index: 999;
        transform: translateX(1rem);
        border-radius: 50%;

        &:checked {
            background-image: url("../assets/icon-check.svg"), var(--check-background);
            background-position: center center;
            background-repeat: no-repeat;
        }
    } 

    &__text--uncompleted {
        flex: 3;
        font-weight: var(--font-weigth-bold);
        font-size: .8rem;
        color: var(--lt-very-dark-grayish-blue);
        grid-column: 2/6;
        width: 100%;
        padding-block: .8rem;
    }

    &__text--completed {
        flex: 3;
        font-weight: var(--font-weigth-bold);
        font-size: .8rem;
        color: var(--lt-light-grayish-blue);
        text-decoration: line-through;
        grid-column: 2/6;
        width: 100%;
        padding-block: .8rem;
    }
    
    &__btn {
        width: .5rem;
        height: .5rem;
        transform: translateX(-1.5rem) translateY(-.2rem);
        grid-column: -1;
    }
}

@media screen and (min-width: 1024px) {
    .Task {
        grid-template-columns: repeat(10, 1fr);
        width: 30rem;
        max-width: 30rem;

        &__text--uncompleted {
            grid-column: 2/10;
        }

        &__text--completed {
            grid-column: 2/10;
        }
    }
}

